--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "jest"
+    "test": "jest",
+    "migrate": "node scripts/migrate-to-hadoop.js",
+    "setup-hadoop": "bash hadoop-setup/setup.sh"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.5.0",
     "socket.io": "^4.7.2",
     "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
@@ -18,7 +19,10 @@
     "cors": "^2.8.5",
     "openai": "^4.0.0",
     "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "mongodb": "^5.0.0",
+    "hadoop-js": "^0.1.0",
+    "avro-js": "^1.10.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
