--- a/package.json
+++ b/package.json
@@ -43,27 +43,32 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
-    "axios": "^1.8.4",
+    "@types/pg": "^8.15.1",
+    "axios": "^1.9.0",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.39.1",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.43.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "multer": "^1.4.5-lts.2",
     "openai": "^4.93.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.16.0",
     "puppeteer": "^24.6.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -75,7 +80,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
-    "wouter": "^3.3.5",
+    "wouter": "^3.7.0",
     "ws": "^8.18.0",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0"
